# vgfx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
dep/include/freetype/: freetype.h
dep/lib/macos-arm64/: libraylib.4.2.0.dylib
res/shader/: base.frag  base.vert  default.frag  default.vert  text.frag  text.vert
src/: main.c
src/vgfx/: asset.c  asset.h  camera.c  camera.h  common.h  core.c  core.h  font.c  font.h  gl.c  gl.h  input.c  input.h  os.c  os.h  render.c  render.h  shader.c  shader.h  texture.c  texture.h  vgfx.h  window.c  window.h
src/vgfx/util/: camera_3d.c  camera_3d.h
